--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <div class="main-box">
         <div class="contents">
-            <img src="./image/logo.jpg" alt="" class="logo"> 
+            <h1 class="logo">MEGA_FILMS</h1> 
             <div class="navbar">
                 <a href="" class="home">HOME</a>
                 <a href="" class="web-series"><img src="./icons/video-camera.png" alt="" class="video"> Web Series<i
@@ -94,7 +94,6 @@
             </div>
             <div class="poster">
                 <div class="poster1"> <img src="./image/Brahmastra.jpg" alt="" class="brahmastra">
-                    <p class="download">Download</p>
                     <p class="date"><img src="./icons/calendar.png" alt="" class="calender">04 Nov 2022</p>
                     <p class="para">Download Brahmastra Part One: Shiva(2022)WEB-DL[Hindi DD5.1] Full Movie
                         480p[550MB]|720p[1.3GB]<br>|1080p[3GB]|2160p 4K</p>
