--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <div class="main-box">
         <div class="contents">
-            <h1 class="logo">MEGA_FILMS</h1> 
+            <h1 class="logo">MEGA_FILMS🔥</h1> 
             <div class="navbar">
                 <a href="" class="home">HOME</a>
                 <a href="" class="web-series"><img src="./icons/video-camera.png" alt="" class="video"> Web Series<i
